# wiznet-w7500-surf5

./: .gitignore  README.md
firmware/exam/EX-02-S_UART/src/ap/: ap.c  ap.h
firmware/exam/EX-02-S_UART/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-02-S_UART/src/hw/driver/: led.c
firmware/exam/EX-03-CLI/src/ap/: ap.c
firmware/exam/EX-03-CLI/src/bsp/device/: w7500_it.h
firmware/exam/EX-03-CLI/src/bsp/ldscript/: W7500_FLASH.ld
firmware/exam/EX-03-CLI/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-03-CLI/src/hw/driver/: led.c  uart.c
firmware/exam/EX-03-CLI/tools/: WIZnet.W7500_DFP.1.0.0.pack
firmware/exam/EX-04-DHCP/: CMakeLists.txt
firmware/exam/EX-04-DHCP/src/bsp/: bsp.c
firmware/exam/EX-04-DHCP/src/bsp/device/: w7500_it.c
firmware/exam/EX-04-DHCP/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-04-DHCP/src/hw/driver/: event.c  led.c
firmware/exam/EX-04-DHCP/src/hw/driver/wiznet/: wiznet.h
firmware/exam/ex-01-led/: CMakeLists.txt
firmware/exam/ex-01-led/src/ap/: ap_def.h
firmware/exam/ex-01-led/src/bsp/: bsp.c  bsp.h
firmware/exam/ex-01-led/src/hw/: hw.c  hw_def.h
firmware/exam/ex-01-led/tools/WIZnet.W7500_DFP.1.0.0/: WIZnet.W7500_DFP.pdsc
firmware/wiznet-surf5-fw/src/ap/: ap.c  ap_def.h
firmware/wiznet-surf5-fw/src/bsp/startup/: startup_w7500.s
firmware/wiznet-surf5-fw/src/common/: def.h  evt_code.h
firmware/wiznet-surf5-fw/src/common/hw/include/: cli.h  event.h
firmware/wiznet-surf5-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/wiznet-surf5-fw/src/hw/driver/: event.c
firmware/wiznet-surf5-fw/src/hw/driver/wiznet/: wiznet.c
firmware/wiznet-surf5-fw/tools/WIZnet.W7500_DFP.1.0.0/: WIZnet.W7500_DFP.pdsc
firmware/wiznet-surf5-fw/tools/WIZnet.W7500_DFP.1.0.0/Flash/: W7500_128.FLM
(+7 files in other folders)
